--- a/estilos/style.css
+++ b/estilos/style.css
@@ -7,8 +7,8 @@
 }
 
 html, body {
-    height: 100vh;
-    width: 100vh;
+    height: 100vh; /*100% da altura total do navegador*/
+    width: 100vw; /*100% da largura do navegador*/
     background-color: black;
 }
 
