--- a/estilos/style.css
+++ b/estilos/style.css
@@ -28,7 +28,7 @@ section#telefone {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    
+
     height: 627px;
     width: 311px;
     background: url('../imagens/frame-iphone.png') no-repeat;
@@ -40,4 +40,23 @@ iframe#tela {
     left: 23px;
     width: 267px;
     height: 471px;
+}
+
+section#redes-sociais {
+    text-align: right;
+}
+
+section#redes-sociais img { /* ou section#redes-sociais > a > img {}*/
+    width: 50px;
+    height: 50px;
+    margin: 10px;
+    border-radius: 50%;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.644);
+    box-sizing: border-box; /*comando para a borda fazer parte da imagem*/
+}
+
+section#redes-sociais img:hover { /* hover = pseudo-classe para adicionar um estado a um elemento, no caso, ao passar o mouse por cima, faça "tal ação" */
+    border: 2px solid rgba(255, 255, 255, 0.438);
+    transform: translate(-3px, -3px); /* Comando para fazer o botão vir para esquerda e para cima um pouco. */
+    transition: transform .3s, border .4s; /* Fazer um movimento suave do botão ao passar o mouse por cima*/
 }
